--- a/products/tera.html
+++ b/products/tera.html
@@ -11,8 +11,9 @@ Designed by: Rafael Aguilar & José Pablo Iglesias
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="title" content="MOCK A BUCK">
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Ropa, Streetwear, Tera">
     <title>TERA | MOCK A BUCK</title>
 
     <!-- Favicon -->
