--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ Designed by: Rafael Aguilar & José Pablo Iglesias
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="title" content="MOCK A BUCK">
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Ropa, Streetwear">
     <title>MOCK A BUCK</title>
 
     <!-- Favicon -->
@@ -26,6 +27,21 @@ Designed by: Rafael Aguilar & José Pablo Iglesias
     <!-- Snipcart -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '2075491535832004');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=2075491535832004&ev=PageView&noscript=1"/></noscript>
 </head>
 <body>
     
