--- a/products/fukencio.html
+++ b/products/fukencio.html
@@ -126,7 +126,7 @@ Designed by: Rafael Aguilar & José Pablo Iglesias
         <!-- <FOOTER> -->
             <div id="mab-footer" class="animated fadeInUp" style="animation-delay: .5s">
                 <p>
-                    <a href="terms.html" class="">TERMS</a>&nbsp;&nbsp;
+                    <a href="../terms.html" class="">TERMS</a>&nbsp;&nbsp;
                     <a href="" class="">CONTACT</a>
                 </p>
             </div>
