--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body >
+    <br><br><br>
+    <script>
+        function previousPage() {
+            window.history.go(-1);
+        };
+    </script>
+    <div class="back" style="text-align: center;">
+        <a class="mab-magic-btn" onclick="previousPage()" style="text-decoration: none; cursor: pointer;">Regresar</a>
+    </div>
+    <br><br>
     <div class="terms">
             <h1>TÉRMINOS DE SERVICIO</h1>
     <hr>
